# bookkeeper

./: LICENSE  README.md  howtorun.txt  pyproject.toml
.github/workflows/: build.yml
bookkeeper/: presenter.py
bookkeeper/models/: budget.py
bookkeeper/repository/: sqlite_repository.py
bookkeeper/view/: app_window.py  example.py
tests/test_models/: test_budget.py  test_category.py
tests/test_repository/: test_sqlite_repository.py
